syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package msgLogic;

service MsgLogic {
    rpc ParseMsg (ParseMsgRequest) returns (ParseMsgResponse){}
    rpc GetLinkByToken (GetLinkByTokenRequest) returns (GetLinkByTokenResponse){}
}

message ParseMsgRequest {
    bytes data = 1;
}

message GetLinkByTokenRequest {
    string token = 1;
}

message ParseMsgResponse {
    repeated string linkKeys = 1;
    bytes data = 2;
}

message GetLinkByTokenResponse {
    string linkId = 1;
    string linkKey = 2;
    string nick = 3;
    string avt = 4;
    string appId = 5;
}